// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots General/MLButton Basic 1`] = `
<div>
  <div>
    Note: On the hosted (non-local) StoryBook, this component's custom CSS is not currently rendering correctly. This should not affect use of the component in your app.
  </div>
  <button
    class="ant-btn ml-btn ant-btn-primary ant-btn-sm"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
</div>
`;

exports[`Storyshots General/MLButton Disabled 1`] = `
<div>
  <div>
    Note: On the hosted (non-local) StoryBook, this component's custom CSS is not currently rendering correctly. This should not affect use of the component in your app.
  </div>
  <button
    class="ant-btn ml-btn ant-btn-sm"
    disabled=""
    type="button"
  >
    <span>
      Disabled
    </span>
  </button>
</div>
`;

exports[`Storyshots General/MLButton Multiple 1`] = `
<div>
  <div>
    Note: On the hosted (non-local) StoryBook, this component's custom CSS is not currently rendering correctly. This should not affect use of the component in your app.
  </div>
  <button
    class="ant-btn ml-btn ant-btn-primary ant-btn-sm"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn ml-btn ml-btn-highlight ant-btn-primary ant-btn-sm"
    type="button"
  >
    <span>
      Highlight
    </span>
  </button>
  <button
    class="ant-btn ml-btn ant-btn-sm"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ml-btn ant-btn-danger ant-btn-sm"
    type="button"
  >
    <span>
      Danger
    </span>
  </button>
</div>
`;
